[project]
name = "astroph_new"
description = "python module to make summary of astro-ph based on user interests"
version = "0.2.4"
authors = [{ name = "Shinyoung Kim", email = "radioshiny@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "bs4", "numpy", "selenium", "whoswho"
]

[project.urls]
Documentation = "https://astroph-new.readthedocs.io"
Source = "https://github.com/radioshiny/astroph_new"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
