[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = astroph_new
description = python functions for astro-ph
long_description =
author = Shinyoung Kim
author_email = radioshiny@gmail.com
license = MIT
url = https://github.com/radioshiny/astroph_new
edit_on_github = True
github_project = radioshiny/astroph_new