[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = astroph_new
description = python module to make summary of astro-ph based on user interests
long_description = file: README.rst
author = Shinyoung Kim
author_email = radioshiny@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/radioshiny/astroph_new
github_project = radioshiny/astroph_new
project_urls =
    Documentation = https://astroph-new.readthedocs.io
    Source = https://github.com/radioshiny/astroph_new
